feat: 상대위치로 사각형 보드 매핑, 렌더링